--- a/templates/login.html
+++ b/templates/login.html
@@ -9,19 +9,12 @@
 <body>
     <div class="login_div">
         <form action="/action_page.php">
-          <label for="fname">First Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your name.." class="input_s">
+          <label for="fname">Email Address</label>
+          <input type="text" id="fname" name="firstname" placeholder="Your email.." class="input_s">
       
-          <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lastname" placeholder="Your last name.." class="input_s">
-      
-          <label for="country">Country</label>
-          <select id="country" name="country" class="input_s">
-            <option value="australia">Australia</option>
-            <option value="canada">Canada</option>
-            <option value="usa">USA</option>
-          </select>
-        
+          <label for="password">Password</label>
+          <input type="password" id="lname" name="password" class="input_s">
+          
           <input type="submit" value="Submit" class="submit">
         </form>
       </div>
